# orchestrator-rs

./: .dockerignore  .env.dev.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_BARE_METAL.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  FEATURES.md  GITHUB_RELEASE_GUIDE.md  IMPROVEMENTS_COMPLETED.md  INTEGRATION_TESTING_STRATEGY.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LXC_MODIFICATION_GUIDE.md  Makefile  PRE_PUSH_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_STATUS.md  README.md  RUNNING.md  SECURITY.md  TESTING_BARE_METAL.md  TODAYS_CHANGES_VERIFICATION.md  arm-hypervisor.service.example  config.toml.example  container_deployment_demo.sh  demo_container_operations.sh  deploy_nginx_test.sh  docker-compose.dev.yml  docker-compose.yml  implementation_summary.sh  lxc_modification_guide.sh  setup_sudo.sh  simulate_full_test.sh  (+3 more)
.cargo/: audit.toml  config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration.yml  release.yml
config/: production.toml
crates/api-server/: Cargo.toml  Dockerfile  config.toml
crates/api-server/src/: audit.rs  config.rs  handlers.rs  lib.rs  main.rs  middleware.rs  observability.rs  rbac.rs  request_tracing.rs  routes.rs
crates/api-server/tests/: compose_integration.rs  integration_tests.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: consensus.rs  error.rs  lib.rs  membership.rs  network.rs  state.rs
crates/container-manager/: Cargo.toml
crates/container-manager/src/: config.rs  container.rs  error.rs  lib.rs  lxc.rs  snapshot.rs
crates/container-manager/tests/: mock_lxc.rs
crates/models/: Cargo.toml
crates/models/src/: cluster.rs  container.rs  lib.rs  network.rs  node.rs  storage.rs
crates/network/: Cargo.toml
crates/network/src/: bridge.rs  error.rs  firewall.rs  lib.rs  vlan.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  local.rs  shared.rs  volumes.rs
crates/web-ui/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json
crates/web-ui/src/: App.tsx
crates/web-ui/src/components/: Layout.tsx
crates/web-ui/src/pages/: Cluster.tsx  Containers.tsx  Dashboard.tsx  Network.tsx  Storage.tsx
crates/web-ui/src/services/: api.ts
docs/: BACKUP_RECOVERY.md  CI_STATUS.md
monitoring/: grafana-dashboard.json  prometheus-alerts.yml
scripts/: build.sh  install.sh  setup-production.sh  setup-tls.sh  start-api-local.sh  test-containers.sh
