[package]
name = "api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true, features = ["macros", "rustls-0_23"] }
actix-rt = { workspace = true }
tokio = { workspace = true }
models = { path = "../models" }
container-manager = { path = "../container-manager" }
cluster = { path = "../cluster" }
storage = { path = "../storage" }
network = { path = "../network" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
num_cpus = { workspace = true }
gethostname = { workspace = true }
sys-info = "0.9"
futures-util = "0.3"
rustls = "0.23"
rustls-pemfile = "2.0"

[dev-dependencies]
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
